# deep-learning-labs

./: .gitignore  README.md  pyproject.toml
1_cv/: README.md  pyproject.toml
1_cv/week_01/: README.md  hw_1_game_of_thrones.ipynb
1_cv/week_01/homework/: hw_1_game_of_thrones.ipynb
1_cv/week_01/seminar/: part_2_intro_to_sklearn.ipynb
1_cv/week_02/: README.md  hw_week02.ipynb
1_cv/week_03/: README.md
1_cv/week_03/seminar/: model_selection_ensembles.ipynb
1_cv/week_03_add/: Readme.md
1_cv/week_04/: README.md
1_cv/week_05/: README.md
1_cv/week_06/: README.md
1_cv/week_07/: README.md
1_cv/week_08/: README.md
1_cv/week_09/: README.md
1_cv/week_10/: README.md
1_cv/week_11/: README.md
2_nlp/: README.md  pyproject.toml
2_nlp/week_01/: 1_seminar.ipynb  Readme.md
2_nlp/week_01/homework/: 1_hw_embeddings.ipynb
2_nlp/week_02/: Readme.md  hw-week02.ipynb  seminar.ipynb
2_nlp/week_03/: Readme.md  agg_results_backup.pkl  hw_week_03.ipynb  training_log.txt
2_nlp/week_04/: Readme.md
2_nlp/week_05/: Readme.md
2_nlp/week_05/seminar/: Seminar_Attention_and_Transformers.ipynb
2_nlp/week_06/: Readme.md
2_nlp/week_07/: Readme.md
2_nlp/week_08/: Readme.md
2_nlp/week_08/homework/: hf_rag.ipynb
2_nlp/week_09/: Readme.md
2_nlp/week_10/: Readme.md
4_speech/: README.md  pyproject.toml
4_speech/week_01/: Readme.md  hw.ipynb
4_speech/week_01/homework/: Homework_1_Environmental_Sound_Classification_for_students.ipynb
4_speech/week_02/: Readme.md  hw_week02.ipynb
4_speech/week_03/: Readme.md
4_speech/week_04/: Readme.md
4_speech/week_05/: Readme.md
4_speech/week_06/: Readme.md
4_speech/week_07/: Readme.md
4_speech/week_08/: Readme.md
4_speech/week_09/: Readme.md
4_speech/week_10/seminar/: dls_week_10_seminar.ipynb
4_speech/week_11/: Readme.md
