[project]
name = "dls-full-course"
version = "0.1.0"
description = "Hybrid setup: CUDA on Linux, CPU on Windows"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "datasets>=4.8.4",
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "notebook>=7.5.5",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pymorphy3>=2.0.6",
    "scikit-learn>=1.5.0,<1.6.0",
    "seaborn>=0.13.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]