[project]
name = "dls-2-sem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "nltk>=3.9.3",
    "notebook>=7.5.4",
    "polars>=1.38.1",
    "pymorphy3>=2.0.6",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
